--- a/STM32 Software/MEPOS STM32F405RGT6 - DRV8876.ioc
+++ b/STM32 Software/MEPOS STM32F405RGT6 - DRV8876.ioc
@@ -6,12 +6,16 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC2.IPParameters=Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
 ADC2.NbrOfConversionFlag=1
-ADC2.Rank-1\#ChannelRegularConversion=1
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC2.Rank-3\#ChannelRegularConversion=1
+ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC3.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-2\#ChannelRegularConversion=1
+ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.0.Instance=DMA2_Stream0
@@ -22,63 +26,74 @@ Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC2.1.Instance=DMA2_Stream2
-Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.1.Mode=DMA_CIRCULAR
-Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
-Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC2.6.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC2.6.Instance=DMA2_Stream2
+Dma.ADC2.6.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.6.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.6.Mode=DMA_CIRCULAR
+Dma.ADC2.6.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.6.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.6.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC3.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC3.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC3.5.Instance=DMA2_Stream1
+Dma.ADC3.5.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC3.5.MemInc=DMA_MINC_ENABLE
+Dma.ADC3.5.Mode=DMA_CIRCULAR
+Dma.ADC3.5.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC3.5.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC3.5.Priority=DMA_PRIORITY_LOW
+Dma.ADC3.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
-Dma.Request1=ADC2
-Dma.Request2=TIM3_CH1/TRIG
-Dma.Request3=TIM3_CH2
-Dma.Request4=TIM3_CH3
-Dma.Request5=TIM3_CH4/UP
-Dma.RequestsNb=6
-Dma.TIM3_CH1/TRIG.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM3_CH1/TRIG.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM3_CH1/TRIG.2.Instance=DMA1_Stream4
-Dma.TIM3_CH1/TRIG.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM3_CH1/TRIG.2.MemInc=DMA_MINC_ENABLE
-Dma.TIM3_CH1/TRIG.2.Mode=DMA_CIRCULAR
-Dma.TIM3_CH1/TRIG.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM3_CH1/TRIG.2.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM3_CH1/TRIG.2.Priority=DMA_PRIORITY_LOW
-Dma.TIM3_CH1/TRIG.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.TIM3_CH2.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM3_CH2.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM3_CH2.3.Instance=DMA1_Stream5
-Dma.TIM3_CH2.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM3_CH2.3.MemInc=DMA_MINC_ENABLE
-Dma.TIM3_CH2.3.Mode=DMA_CIRCULAR
-Dma.TIM3_CH2.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM3_CH2.3.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM3_CH2.3.Priority=DMA_PRIORITY_LOW
-Dma.TIM3_CH2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.TIM3_CH3.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM3_CH3.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM3_CH3.4.Instance=DMA1_Stream7
-Dma.TIM3_CH3.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM3_CH3.4.MemInc=DMA_MINC_ENABLE
-Dma.TIM3_CH3.4.Mode=DMA_CIRCULAR
-Dma.TIM3_CH3.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM3_CH3.4.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM3_CH3.4.Priority=DMA_PRIORITY_LOW
-Dma.TIM3_CH3.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.TIM3_CH4/UP.5.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM3_CH4/UP.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM3_CH4/UP.5.Instance=DMA1_Stream2
-Dma.TIM3_CH4/UP.5.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.TIM3_CH4/UP.5.MemInc=DMA_MINC_ENABLE
-Dma.TIM3_CH4/UP.5.Mode=DMA_CIRCULAR
-Dma.TIM3_CH4/UP.5.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.TIM3_CH4/UP.5.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM3_CH4/UP.5.Priority=DMA_PRIORITY_LOW
-Dma.TIM3_CH4/UP.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request1=TIM3_CH1/TRIG
+Dma.Request2=TIM3_CH2
+Dma.Request3=TIM3_CH3
+Dma.Request4=TIM3_CH4/UP
+Dma.Request5=ADC3
+Dma.Request6=ADC2
+Dma.RequestsNb=7
+Dma.TIM3_CH1/TRIG.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM3_CH1/TRIG.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM3_CH1/TRIG.1.Instance=DMA1_Stream4
+Dma.TIM3_CH1/TRIG.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH1/TRIG.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH1/TRIG.1.Mode=DMA_CIRCULAR
+Dma.TIM3_CH1/TRIG.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH1/TRIG.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH1/TRIG.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH1/TRIG.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM3_CH2.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM3_CH2.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM3_CH2.2.Instance=DMA1_Stream5
+Dma.TIM3_CH2.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH2.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH2.2.Mode=DMA_CIRCULAR
+Dma.TIM3_CH2.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH2.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH2.2.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH2.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM3_CH3.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM3_CH3.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM3_CH3.3.Instance=DMA1_Stream7
+Dma.TIM3_CH3.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH3.3.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH3.3.Mode=DMA_CIRCULAR
+Dma.TIM3_CH3.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH3.3.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH3.3.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH3.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM3_CH4/UP.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM3_CH4/UP.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM3_CH4/UP.4.Instance=DMA1_Stream2
+Dma.TIM3_CH4/UP.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH4/UP.4.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH4/UP.4.Mode=DMA_CIRCULAR
+Dma.TIM3_CH4/UP.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH4/UP.4.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH4/UP.4.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH4/UP.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -86,28 +101,31 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IPNb=7
+Mcu.IP2=ADC3
+Mcu.IP3=DMA
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA8
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PC6
-Mcu.Pin7=PC7
-Mcu.Pin8=PA8
-Mcu.Pin9=PA13
-Mcu.PinsNb=13
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PC6
+Mcu.Pin9=PC7
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -120,6 +138,7 @@ NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -142,6 +161,12 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=DRV1_FB
+PA2.Signal=ADCx_IN2
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=DRV2_FB
+PA3.Signal=ADCx_IN3
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=nSLEEP
 PA8.Locked=true
@@ -194,7 +219,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC3_Init-ADC3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -231,8 +256,12 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN1.0=ADC2_IN1,IN1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC2_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC3_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
